--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
     "react-dev": "webpack -d --watch"
   },
   "dependencies": {
-    "mongoose": "^5.5.8"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.8",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-airbnb": "^3.2.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
   }
