--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dev": "webpack -d --watch"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "mongoose": "^5.5.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
