--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "puppeteer": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "sinon": "^7.3.2",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
